--- a/home/index.html
+++ b/home/index.html
@@ -133,7 +133,102 @@
                 <button><i class="fa-solid fa-chevron-right"></i></button>
             </section>
         </section>
-        <section class="fornow">a</section>
+        <section class="specialOffer">
+            <article>
+                <h2>Special Offers</h2>
+                <p>These rooms are offered at a special price.</p>
+            </article>
+            <section>
+                <button><i class="fa-solid fa-chevron-left"></i></button>
+                <section>
+                    <a href="#" class="hSpe1">
+                        <figure>
+                            <img src="./hRoom1.jpg" alt="">
+                            <figcaption>
+                                <span>
+                                    <h4>100 CAD per night</h4>
+                                </span>
+                                <i class="fa-solid fa-draw-polygon"></i>
+                            </figcaption>
+                        </figure>
+                        <article>
+                            <h3>NameNameName</h3>
+                            <section>
+                                <h4 class="rCity">North Vancouver</h4>
+                                <aside>
+                                    <i class="fa-solid fa-bed"></i>
+                                    <h4 class="rBed">2</h4>
+                                </aside>
+                                <aside>
+                                    <i class="fa-solid fa-person-half-dress"></i>
+                                    <h4 class="rPeople">4</h4>
+                                </aside>
+                            </section>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo facilis incidunt commodi tempora doloremque!
+                            </p>
+                        </article>
+                    </a>
+                    <a href="#" class="hSpe2">
+                        <figure>
+                            <img src="./hRoom1.jpg" alt="">
+                            <figcaption>
+                                <span>
+                                    <h4>100 CAD per night</h4>
+                                </span>
+                                <i class="fa-solid fa-draw-polygon"></i>
+                            </figcaption>
+                        </figure>
+                        <article>
+                            <h3>NameNameName</h3>
+                            <section>
+                                <h4 class="rCity">North Vancouver</h4>
+                                <aside>
+                                    <i class="fa-solid fa-bed"></i>
+                                    <h4 class="rBed">2</h4>
+                                </aside>
+                                <aside>
+                                    <i class="fa-solid fa-person-half-dress"></i>
+                                    <h4 class="rPeople">4</h4>
+                                </aside>
+                            </section>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabue! Lorem ipsum dolor sit amet.
+                            </p>
+                        </article>
+                    </a>
+                    <a href="#" class="hSpe3">
+                        <figure>
+                            <img src="./hRoom1.jpg" alt="">
+                            <figcaption>
+                                <span>
+                                    <h4>100 CAD per night</h4>
+                                </span>
+                                <i class="fa-solid fa-draw-polygon"></i>
+                            </figcaption>
+                        </figure>
+                        <article>
+                            <h3>NameNameName</h3>
+                            <section>
+                                <h4 class="rCity">North Vancouver</h4>
+                                <aside>
+                                    <i class="fa-solid fa-bed"></i>
+                                    <h4 class="rBed">2</h4>
+                                </aside>
+                                <aside>
+                                    <i class="fa-solid fa-person-half-dress"></i>
+                                    <h4 class="rPeople">4</h4>
+                                </aside>
+                            </section>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo facilis incidunt commodi tempora doloremque!
+                            </p>
+                        </article>
+                    </a>
+                </section>
+                <button><i class="fa-solid fa-chevron-right"></i></button>
+            </section>
+        </section>
     </main>
 </body>
 </html>
