--- a/description/inc/gallery.html
+++ b/description/inc/gallery.html
@@ -34,26 +34,30 @@
             </article>
         </article>
         <article class="right">
-            <aside class="block">
-                <p>CHECK - IN</p>
-                <span>18</span>
-                <p>Jan, 2019 - Saturday</p>
-                <button>CHANGE</button>
-            </aside>
-            <aside class="block">
-                <p>CHECK - OUT</p>
-                <span>21</span>
-                <p>Feb, 2019 - Tuesday</p>
-                <button>CHANGE</button>
-            </aside>
-            <aside class="block">
-                <p>GUESTS</p>
-                <span>3</span>
-            </aside>
-            <aside class="block">
-                <p>Nights</p>
-                <span>4</span>
-            </aside>
+            <section class="top">
+                <aside class="block">
+                    <p>CHECK - IN</p>
+                    <span>18</span>
+                    <p>Jan, 2019 - Saturday</p>
+                    <button>CHANGE</button>
+                </aside>
+                <aside class="block">
+                    <p>CHECK - OUT</p>
+                    <span>21</span>
+                    <p>Feb, 2019 - Tuesday</p>
+                    <button>CHANGE</button>
+                </aside>
+            </section>
+            <section class="bottom">
+                <aside class="block">
+                    <p>GUESTS</p>
+                    <span>3</span>
+                </aside>
+                <aside class="block">
+                    <p>Nights</p>
+                    <span>4</span>
+                </aside>
+            </section>
             <button>BOOK NOW</button>
         </article>
     </section>
