htmlCss-home: put accordion

--- a/home/index.html
+++ b/home/index.html
@@ -56,9 +56,11 @@
                     </aside>
                     <input type="submit" value="Search">
                 </form>
-                <section class="hMap">
-                    <!-- put map here -->
-                </section>
+                <figure class="accordion">
+                    <input type="checkbox" id="hMap">
+                    <label for="hMap">Vancouver Map <i class="fa-solid fa-chevron-down"></i></label>
+                    <img src="./hMap.jpg" alt="">
+                </figure>
             </section>
         </section>
         <section class="hDestination">
