htmlCss-home: organized folder and files

--- a/home/inc/index.html
+++ b/home/inc/index.html
@@ -59,7 +59,7 @@
                 <figure class="accordion">
                     <input type="checkbox" id="hMap">
                     <label for="hMap">Vancouver Map <i class="fa-solid fa-chevron-down"></i></label>
-                    <img src="./hMap.jpg" alt="">
+                    <img src="../inc/img/hMap.jpg" alt="">
                 </figure>
             </section>
         </section>
