--- a/result/inc/index.html
+++ b/result/inc/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House List</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
@@ -63,16 +63,12 @@
                 </figure>
             </section>
         </section>
-        <aside class="rTitle">
-            <h2>Rooms in:</h2>
-            <h2 class="rLocation">All Vancouver</h2>
-            <!-- this part changes due to the selected places -->
-        </aside>
         <section class="rList">
             <article>
-                <aside>
-                    <h2>Special Offers</h2>
-                    <p>These rooms are offered at a special price.</p>
+                <aside class="rTitle">
+                    <h2>Rooms in:</h2>
+                    <h2 class="rLocation">All Vancouver</h2>
+                    <!-- this part changes due to the selected places -->
                 </aside>
                 <ul>
                     <li><i class="fa-solid fa-house"></i>: Entire home/apt</li>
@@ -82,8 +78,12 @@
                     <li><i class="fa-solid fa-person-half-dress"></i>: Number of guests</li>
                 </ul>
             </article>
+            <aside>
+                <a href="?sortBy=price#list">Price <i class="fa-solid fa-angles-down"></i></a>
+                <a href="?sortBy=priceDesc#list">Price <i class="fa-solid fa-angles-up"></i></a>
+            </aside>
             <section>
-                <a href="#">
+                <a href="#" class="rAcm">
                     <figure>
                         <img class="rPicture" src="./img/rRoom1.jpg" alt="">
                         <figcaption>
