--- a/description/inc/gallery.html
+++ b/description/inc/gallery.html
@@ -56,6 +56,7 @@
                 <aside class="block">
                     <p>Nights</p>
                     <span>4</span>
+                    <img src="/description/inc/img/user.png" alt="">
                 </aside>
             </section>
             <button>BOOK NOW</button>
