connection with database, form to jump to result page done:home

--- a/home/inc/index.html
+++ b/home/inc/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
@@ -74,7 +74,7 @@
                         <img src="./hGranvilleIsland.jpg" alt="">
                         <figcaption>
                             <h3>Granville Island</h3>
-                            <input type="button" value="Go">
+                            <a href="../result/?checkIn=&checkOut=&location=Fairview&guest=">Go</a>
                         </figcaption>
                     </figure>
                     <article>
@@ -87,7 +87,7 @@
                         <img src="./hStanleyPark.jpg" alt="stanleyPark">
                         <figcaption>
                             <h3>Stanley Park</h3>
-                            <input type="button" value="Go">
+                            <a href="../result/?checkIn=&checkOut=&location=West+End&guest=">Go</a>
                         </figcaption>
                     </figure>
                     <article>
@@ -100,7 +100,7 @@
                         <img src="./hScienceWorld.jpg" alt="scienceWorld">
                         <figcaption>
                             <h3>Science World</h3>
-                            <input type="button" value="Go">
+                            <a href="../result/?checkIn=&checkOut=&location=Mount+PLeasant&guest=">Go</a>
                         </figcaption>
                     </figure>
                     <article>
