--- a/login/inc/login-1.html
+++ b/login/inc/login-1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="login">
-    <section class="containerlogin">
+    <section class="containerLogin">
         <img src="./img/luggage-cart.png">
 		<form>
 			<aside class="form-input">
