done using my local database

--- a/signUp/inc/index.html
+++ b/signUp/inc/index.html
@@ -26,7 +26,7 @@
         <img src="./img/luggage-cart.png">
 		<form method="post">
 			<aside class="form-input">
-				<input type="text" name="text" placeholder="Your username"/>	
+				<input type="text" name="text" placeholder="Your username" required/>	
 			</aside>
 			<aside class="form-input">
 				<input type="password" name="password" placeholder="Your password"/>
