--- a/login/inc/login-1.html
+++ b/login/inc/login-1.html
@@ -11,16 +11,21 @@
 </head>
 <body class="login">
     <section class="containerLogin">
-        <img src="./img/luggage-cart.png">
-		<form>
-			<aside class="form-input">
-				<input type="text" name="text" placeholder="Enter your username"/>	
-			</aside>
-			<aside class="form-input">
-				<input type="password" name="password" placeholder="password"/>
-			</aside>
-			<input type="submit" type="submit" value="LOGIN" class="btn-login"/>
-		</form>
+        <form action="login.php" method="post">
+            <figure>
+                <img src="./img/luggage-cart.png">
+            </figure>
+            <h2>LOGIN</h2>
+            <aside class="form-input">
+                <label>User Name</label>
+                <input type="text" name="uname" placeholder="Enter your username"/>	
+            </aside>
+            <aside class="form-input">
+                <label>Password</label>
+                <input type="password" name="password" placeholder=" your password"/>
+            </aside>
+            <input type="submit" type="submit" value="LOGIN" class="btn-login"/>
+        </form>
     </section>
 
 </body>
