--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,21 +9,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 </head>
 <body>
-    <!-- <nav>
-        <ul>
-            <li>
-                <a href="home.html">Home</a>
-            </li>
-            <li>
-                <a href="#">
-                    <i class="fa-regular fa-user"></i>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <header>
-        <section></section>
-    </header> -->
     <main class="profile">
         <!-- left section -->
         <section class="pleft">
@@ -32,7 +17,7 @@
                 <figcaption>
                     <article>
                         <h2>
-                            LaLaLis Katty 
+                            <?php echo $_SESSION['name']; ?>
                         </h2>
                         <h5>
                              <a href="#">
