--- a/addroom/inc/room.html
+++ b/addroom/inc/room.html
@@ -28,25 +28,27 @@
         </section> -->
         <section class="forAdd">
             <form action="add_room.php" method="POST" class="aroom">
-                <section class="form-group">
+                <section class="form-group" id="top">
                     <h2 class="heading">Booking form & contact</h2>
-                    <aside class="controls">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" class="floatLabel" name="name">
-                    </aside>
-                    <aside class="controls">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" class="floatLabel" name="email">
-                    </aside>       
-                    <aside class="controls">
-                        <label for="phone">Phone</label>
-                        <input type="tel" id="phone" class="floatLabel" name="phone">
-                    </aside>
+                    <article>
+                        <aside class="controls">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" class="floatLabel" name="name">
+                        </aside>
+                        <aside class="controls">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" class="floatLabel" name="email">
+                        </aside>       
+                        <aside class="controls">
+                            <label for="phone">Phone</label>
+                            <input type="tel" id="phone" class="floatLabel" name="phone">
+                        </aside>
+                    </article>
                 </section>
                 <!--  Details -->
-                <section class="form-group">
+                <section class="form-group" id="bottom">
                     <h2 class="heading">Details</h2>
-                    <article class="grid">
+                    <article class="grid" id="chkd">
                         <section class="col-1-4 col-1-4-sm">
                             <aside class="controls">
                                 <label for="chkin" class="label-date"><i class="fa fa-calendar"></i>&nbsp;&nbsp;Check In</label>
