--- a/addroom/inc/room.html
+++ b/addroom/inc/room.html
@@ -100,9 +100,9 @@
                             </aside>     
                         </section>
                     </article>
-                    <article class="grid">
+                    <article class="grid" id="commentssec">
                         <p class="info-text">Please describe your needs e.g. Extra beds, children cots</p>
-                        <aside class="controls">
+                        <aside class="controls" id="commentsbox">
                             <label for="comments">Comments</label>
                             <textarea name="comments" class="floatLabel" id="comments"></textarea>
                         </aside>
