wishlist:manage to put form inside a tag

--- a/result/inc/index.html
+++ b/result/inc/index.html
@@ -63,6 +63,11 @@
                 </figure>
             </section>
         </section>
+        <form action="" method="post">
+            <input type="hidden" name="wish" value="">
+            <label for="submit"></label>
+            <input type="submit" name="submit">
+        </form>
         <section class="rList">
             <article>
                 <aside class="rTitle">
