manage to add and delete profile picture:profile

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -10,6 +10,10 @@
 </head>
 <body class="pBody">
     <main class="profile">
+        <form action="#" method="post" class="eForm">
+            <input type="hidden" name="erase">
+            <input type="submit" value="DELETE PICTURE">
+        </form>
         <!-- left section -->
         <section class="pleft">
             <figure>
